fixed window buttons, drag/drop, scaling, align

--- a/src/css/dashboard_style.css
+++ b/src/css/dashboard_style.css
@@ -7,22 +7,15 @@
   background-color: white;
   display: flex;
   flex-direction: column;
+  margin-top: 17px;
   width: 100%
 }
-.dashboard_main .dashboard_item {
-  align-items: flex-start;
-  display: flex;
-  flex-direction: column;
-  margin-top: 19px;
-  min-height: 37px;
-  width: 978px;
-}
+
 .dashboard_main .flex-row {
   align-items: center;
   display: flex;
   height: 19px;
   margin-left: 1px;
-  margin-top: 17px;
   min-width: 75px;
 }
 .dashboard_main .line {
