--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,6 +4,7 @@
 /* *, *:before, *:after {box-sizing: inherit;} */
 html, body {
   width: 100%; height: 100%;
+  overflow: hidden;
 }
 
 .window {
@@ -33,6 +34,7 @@ html, body {
 .sidebar{
   display:table-cell;
   width: 250px;
+  height:100vh;
   background-color:rgb(235, 235, 235);
 }
 
@@ -61,7 +63,7 @@ html, body {
   display: grid;
   grid-template-columns: repeat(1, 30px);
   position: absolute;
-  top: 30px;
+  top: 45px;
   right: 0;
   padding-right: 30px;
   height: 100%;
@@ -112,7 +114,9 @@ html, body {
 
 }
 
-
+.heading {
+  margin-top:15px;
+}
 .window {
   background-color: #ffffff;
 
@@ -130,8 +134,8 @@ html, body {
   align-items: flex-start;
   display: flex;
   flex-direction: column;
-  margin-top: 19px;
-  min-height: 37px;
+  margin-top:10px;
+  margin-bottom:10px;
 }
 
 .listitem .itemname {
