--- a/src/css/stylewin.css
+++ b/src/css/stylewin.css
@@ -2,6 +2,66 @@
     border-radius: 15px; 
 } */
 
+
+#titlebar {
+  display: block;
+  position: fixed;
+  height: 32px;
+  width: calc(100% - 0px);
+}
+
+.maximized #titlebar {
+  width: 100%;
+  padding: 0;
+}
+
+#main {
+  height: calc(100% - 32px);
+  margin-top: 0px;
+  /* padding: 20px; */
+  overflow-y: auto;
+}
+
+#titlebar {
+  padding: 4px;
+}
+
+#titlebar #drag-region {
+  width: 100%;
+  height: 100%; 
+  -webkit-app-region: drag;
+}
+
+#titlebar {
+  color: #FFF;
+}
+
+#titlebar #drag-region {
+  display: grid;
+  grid-template-columns: auto 138px;
+}
+
+#window-title {
+  grid-column: 1;
+  display: flex;
+  align-items: center;
+  margin-left: 8px;
+  overflow: hidden;
+  font-family: "Segoe UI", sans-serif;
+  font-size: 12px;
+}
+
+.maximized #window-title {
+  margin-left: 12px;
+}
+
+#window-title span {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  line-height: 1.5;
+}
+
 #window-controls {
     display: grid;
     grid-template-columns: repeat(3, 46px);
@@ -36,7 +96,7 @@
   
   #window-controls .button {
     user-select: none;
-    filter: invert(0);
+    filter: invert(1);
   }
   
   #window-controls .button:hover {
@@ -65,7 +125,6 @@
     grid-column: 2;
   }
   #close-button {
-    border-top-right-radius: 15px;
     grid-column: 3;
   }
   
